--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
                 <p><br>I'm a Predoc at MIT Sloan focusing on projects in industrial organization under Professors Mert Demirer and Ben Vatter.
-                        I am interested in industrial organization and econometrics, particularly in the design
+                        I'm interested in industrial organization and econometrics, particularly in the design
                         and evaluation of industrial policy in environments with uncertainty. 
                 </p>
 
