--- a/pages/projects.html
+++ b/pages/projects.html
@@ -54,7 +54,7 @@
                             <span>ad hoc</span> empirical methods in their study of ancient economies. 
                             Using the method of partial identification, I give an example 
                             of how formal econometric analysis may be implemented in the study of ancient economies, 
-                            and show that this method allows scholars to explicitly demonstrate the effect on analysis 
+                            and show how this method allows scholars to explicitly demonstrate the effect on analyses 
                             of their beliefs regarding the representativeness of archeological evidence.
                         </p></li>
                         <li class="project-title-link">
