--- a/pages/projects.html
+++ b/pages/projects.html
@@ -79,10 +79,10 @@
                         <p>
                             The basic theory of oligopolistic competition implies that a firm's decision to 
                             maintain tacit collusion is a function of their discount rate, which governs their sensitivity
-                            to changes future payoffs (Tirole, 1988). In basic models of firm payoffs, the discount rate is 
+                            to changes in future payoffs (Tirole, 1988). In basic models, the discount rate is 
                             determined by the risk free rate of interest. Central banks can influence this rate through monetary
                             policy. I am interested in analyzing the relationship between montetary policy and the incidence of tacit 
-                            collusion across an economy. Rotemberg and Saloner (1986) analyze the changes in firms' ability 
+                            collusion across markets. Rotemberg and Saloner (1986) analyze the changes in firms' ability 
                             to maintain collusion in the presence of "booms." Dal Bo (2007) analyzes tacit collusion under 
                             randomly fluctuating discount rates. My plan would be to sythesize these frameworks: analyze the affect on 
                             tacit collusion through flucuation of discount rates as inlfuenced by changes in demand. 
@@ -108,7 +108,7 @@
                                 and the market that they operate in. Given that post-merger enforcement can be costly, and pre-merger challenges may fail, regulators 
                                 may be able to use merger reveiw to reduce the cost of enforcement ex-post by inducing firms to partially reveal their type through the information 
                                 that regualtors extract. Through this revelation, the regulator can credibly signal their willingness to pursue ex-post enforcement and thus 
-                                deter prospective mergers from engaging in in anti-competetive behavior. 
+                                deter prospective mergers from engaging in in anti-competitive behavior. 
                             </p></li>
                 <li class="project-title-link">
                     Idenitifying the Spillover Effects of Minimum Wage Policy
