--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -27,10 +27,10 @@
         </div>
     </div>
     <div class="page-descr">
-        I borrow the concept of a <span>methodological</span> work from <a href="https://www.jstor.org/stable/48714515">Gilboa et al. (2022)</a>.
-        Below are some articles, books, and slides that I think are methodologically <span>interesting</span>. 
-        This latter classification is independent of what I might ultimately think about the individual works or their methodological contributions. 
-        I hope to be updating this list consistently.
+        As it relates to economics, <a href="https://www.jstor.org/stable/48714515">Gilboa et al. (2022)</a> 
+        have an interesting definition of a work's <span>methodological</span> status. 
+
+        Below are some articles, books, and slides that might fit.
     </div>
     <div class="works-container">
         <h1>Articles</h1>
