--- a/pages/notes.html
+++ b/pages/notes.html
@@ -31,7 +31,9 @@
         <br><br>
         Even though they are all available online, there is little chance you'd have come across them by accident. 
         There are many lecture notes online (especially in math), so I am attempting to reserve this page for notes 
-        that I have used, and that I found to be very user-friendly.
+        that I have used, and that I found to be very user-friendly. 
+        <br><br>
+        I also include some of my own notes, which might to useful to some. 
     </div>
 
     <div class="works-container">
@@ -39,13 +41,13 @@
             <ul>
                 <li class="title-article">
                     <a href="https://sites.math.northwestern.edu/~scanez/courses/226/notes/lecture-notes-226.pdf">
-                        Sequences and Series</a><span> by Santiago Cañez (<i>Northwestern</i>)</span></li>
+                        Sequences and Series</a><span> by Santiago Cañez (<i>University of Chicago</i>)</span></li>
                 <li class="title-article">
                     <a href="https://sites.math.northwestern.edu/~scanez/courses/291/notes/lecture-notes-291-1.pdf">
-                        Linear Algebra</a><span> by Santiago Cañez (<i>Northwestern</i>)</span></li>
+                        Linear Algebra</a><span> by Santiago Cañez (<i>University of Chicago</i>)</span></li>
                 <li class="title-article">
                     <a href="https://sites.math.northwestern.edu/~scanez/courses/291/notes.html">
-                        Multivariable Calculus (291-2/291-3)</a><span> by Santiago Cañez (<i>Northwestern</i>)</span></li>
+                        Multivariable Calculus (291-2/291-3)</a><span> by Santiago Cañez (<i>University of Chicago</i>)</span></li>
             </ul>
     </div>
     <div class="works-container">
@@ -62,4 +64,12 @@
                         Econometrics (Probability, Asymptotics)</a><span> by Ludvig Sinander (<i>Oxford</i>)</span></li>        
             </ul>
     </div>
-    
+
+    <div class="works-container">
+        <h1>My Miscellaneous Notes</h1>
+            <ul>
+                <li class="title-article">
+                    <a href="https://drive.google.com/file/d/1kEE8lE58swaEsgvZb3MJtJhqd7j4cyEZ/view?usp=sharing">
+                        Intro to Dynamic Games Empirical IO </a><span> 
+            </ul>
+    </div>
