--- a/pages/old/index_old.html
+++ b/pages/old/index_old.html
@@ -17,7 +17,8 @@
             <ul id="sidemenu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#intrigues">Research and Other Interests</a></li>
+                <li><a href="#portfolio">Interests</a></li>
+                <li><a href="#intrigues">Intrigues</a></li>
                 <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
             </ul>
             <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -26,6 +27,24 @@
             <h1>Aaron Banks</h1>
         </div>
     </div>
+    <!-- <div id="home">
+        <div class="slideshow-container">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_1.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_4.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_10.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_3.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_5.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_7.jpg" alt=""></div>
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </div>
+    </div>
+    <div class="slideshow-caption"><p>While you are here, please enjoy some Caspar David Friedrich</p></div> -->
 </div>
     
 <!-- ----- about ------ -->
@@ -57,9 +76,9 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
-                <p><br> 
-                    I'm a PhD student at UW-Madison studying economics. I'm interested in industrial organization and econometrics.
-                    Previously, I was a predoc at MIT under Professors Mert Demirer and Ben Vatter.
+                <p><br>I'm a Predoc at MIT Sloan focusing on projects in industrial organization under Professors Mert Demirer and Ben Vatter.
+                        I'm interested in industrial organization and econometrics, particularly in the design
+                        and evaluation of industrial policy in environments with uncertainty. 
                 </p>
 
                 <div class="tab-titles">
@@ -69,8 +88,6 @@
                 </div>
                 <div class="tab-contents active-tab" id="Education">
                     <ul>
-                        <li><span>UW Madison</span><br>
-                            <span class="tab-subitem">PhD Candidate, Economics</li>
                         <li><span>Northwestern Unviersity</span><br>
                             <span class="tab-subitem">B.A. Economics (with honors);<br>Minor: Math</span></li>
                         <li><span>Oakton Community College</span><br>
@@ -79,9 +96,7 @@
                 </div>
                 <div class="tab-contents" id="Experience">
                     <ul>
-                        <li><span>2023-Present</span><br>UW Madison<br>
-                            <span class="tab-subitem">Graduate RA to JF Houde</span></li>
-                        <li><span>2023-2025</span><br>MIT Sloan<br>
+                        <li><span>2023-Present</span><br>MIT Sloan<br>
                             <span class="tab-subitem">Predoc under Mert Demirer and Benjamin Vatter</span></li>
                         <li><span>2022</span><br>CME Group Inc., Post-Trade and Optimization Services<br>
                             <span class="tab-subitem">Quant Risk Management & Clearing Intern</span></li>
@@ -132,25 +147,49 @@
 </div>
 <!-- ----- My Work ------ -->
 
+<div id="portfolio">
+    <div class="container">
+        <h1 class="sub-title">Interests</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="images/papers/demarcation.png">
+                <div class="layer">
+                    <h3>Demarcation</h3>
+                    <p>My senior economics thesis discussing testability.</p>
+                    <a href="https://drive.google.com/file/d/1RkVZJIFkT-3pMwm5dsoWkAjK7MUn_yTg/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/papers/slave_prices.png">
+                <div class="layer">
+                    <h3>What was the Price of Slaves in Ancient Rome?</h3>
+                    <p>A methodological perspective on ancient economic data</p>
+                    <a href="https://drive.google.com/file/d/1MfHGJYkR4ODI6MDxbBLcmTVB08JmL60c/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/papers/other.png">
+                <div class="layer">
+                    <h3>Ideas</h3>
+                    <p>Prospective settings for research</p>
+                    <a href="pages/projects"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+        </div>
+        <!-- <a href="#">See More</a> -->
+    </div>
+</div>
 
 <!-- ----- Intrigues ------ -->
 
 <div id="intrigues">
     <div class="container">
-        <h1 class="sub-title">Research and Other Interest</h1>
+        <h1 class="sub-title">Intrigues</h1>
         <div class="intrigues-list">
-
-            <div>
-                <i class="fa-solid fa-file-lines"></i>
-                <h2>Research</h2>
-                <p> My research Projects</p>
-                <a href="pages/methodology">View List</a>
-            </div>
-
             <div>
                 <i class="fa-solid fa-book"></i>
                 <h2>Methodology Readings</h2>
-                <p> A list of works that I find methodologically interesting</p>
+                <p> A list of works that I find methodologically <span>interesting</span></p>
                 <a href="pages/methodology">View List</a>
             </div>
             <div>
