--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,7 +12,6 @@
     <div id="header">
         <div class="container">
             <nav>
-                <!-- <img src="images/logo.jpg" class="logo"> -->
                 <ul id="sidemenu">
                     <li><a href="../index">Home</a></li>
                     <li><a href="methodology">Methodology Readings</a></li>
@@ -22,33 +21,55 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <h1>Ideas</h1>
+                <h1>Research</h1>
             </div>
         </div>
     </div>
-    <div class="page-descr">
+
+    <!-- <div class="page-descr">
         I am <span>not</span> a trained economist, but below are some notes on some 
         topics that interest me. I appreciate any and all literature recommendations.
-    </div>
+    </div> -->
+
     <div class="subtitle">
-        Ideas with Drafts
+        Works in Progress
+    </div>
+
+<div class="working-paper">
+  <ul>
+    <li class="project-title-link wip-line">
+      <span class="wip-title">Robust Risk Adjustment</span>,
+      <span class="wip-authors">
+        with
+        <a class="author-link" href="https://www.pietrotebaldi.com/">Pietro Tebaldi</a>,
+        <a class="author-link" href="https://benjaminvatter.com/">Benjamin Vatter</a>,
+        and
+        <a class="author-link" href="https://www.matthewvzahn.com/">Mathew Zahn</a>
+      </span>
+    </li>
+  </ul>
+</div>
+
+
+    <div class="subtitle">
+        Undergrad Projects
     </div>
     <div class="working-paper">
         <h1></h1>
             <ul>
                 <li class="project-title-link">
                     <a href="https://drive.google.com/file/d/1RkVZJIFkT-3pMwm5dsoWkAjK7MUn_yTg/view?usp=drive_link">
-                        Demarcation</a>
+                        Demarcation (Senior Thesis)</a>
                         <p>
                             Theories may be informative to agents. When agents' actions are determined by the predictions of a
                             theory, the predictions endogenize the data that they are tested against. In this case, it is unclear
-                            in what manner these theories can be regarded as scientific. I characterize this problem in a general
+                            in what manner these theories can be regarded as scientific. I attempt to characterize this problem in a general
                             framework, and state an idealized criterion for theory selection. I then informally suggest the application
                             of this framework in the analysis of various settings. 
                         </p></li>
                 <li class="project-title-link">
                     <a href="https://drive.google.com/file/d/1MfHGJYkR4ODI6MDxbBLcmTVB08JmL60c/view?usp=sharing">
-                        What was the Price of Slaves in Ancient Rome?</a>
+                        What was the Price of Slaves in Ancient Rome? (Graduate American Economics History Final Project)</a>
                         <p>
                             The paucity of numerical data need not result in scholars implementing
                             <span>ad hoc</span> empirical methods in their study of ancient economies. 
@@ -58,88 +79,7 @@
                             of their beliefs regarding the representativeness of archeological evidence.
                         </p></li>
                         <li class="project-title-link">
-                <!-- <a href="#">
-                    Algorithms for Predicting the Outcomes of Over-Under Wagers</a>
-                    <p>
-                        <span>(website coming soon)</span> A.J. Hesby and I are developing a code base for fine-tuning 
-                        predictive models of Over-Under wagers. We are also working on developing a website containing full
-                        code documentation and comprehensive discussions on the construction and implementation of our 
-                        models. 
-                    </p></li> -->
             </ul>
     </div>
-    <div class="subtitle">
-        Prospective Topics/Ruminations/Ideas without Drafts
-    </div>
-    <div class="working-paper">
-        <h1></h1>
-            <ul>
-                <li class="project-title-link">
-                    Does the Fed affect Tacit Collusion?
-                        <p>
-                            The basic theory of oligopolistic competition implies that a firm's decision to 
-                            maintain tacit collusion is a function of their discount rate, which governs their sensitivity
-                            to changes in future payoffs (Tirole, 1988). In basic models, the discount rate is 
-                            determined by the risk free rate of interest. Central banks can influence this rate through monetary
-                            policy. I am interested in analyzing the relationship between montetary policy and the incidence of tacit 
-                            collusion across markets. Rotemberg and Saloner (1986) analyze the changes in firms' ability 
-                            to maintain collusion in the presence of "booms." Dal Bo (2007) analyzes tacit collusion under 
-                            randomly fluctuating discount rates. My plan would be to sythesize these frameworks: analyze the affect on 
-                            tacit collusion through flucuation of discount rates as inlfuenced by changes in demand. 
-                            Empirically, I am interested in characterizing "bounds" on the linkage between monetary policy and 
-                            competition in partial equilibrium. 
-                        </p></li>
-                    <li class="project-title-link">
-                        Evaluation or Persuasion in Industrial Policy?
-                            <p>
-                                In the context of merger review, evaluating a regulator's stringency equates to retrospectively determining
-                                how well its behavior aligned with what would have been  an optimal enforcement criterion. As Carlton (2009) notes,
-                                determining the regulator's degree of stringency, like too lax or too strict, requires comparing the realized effects
-                                of proposed mergers with the the regulator's beliefs about what they would be at the time of the proposal's review.
-                                Recent retrospective evaluations of merger policy have adopted this perspective. 
-                                Bhattacharya et al. (2024) argue that a modest increase in stringency would have reduced prices in US consumer packaged
-                                goods. Similarly, Brot-Golderberg et al. (2024) find that antitrust enforcement is relatively lax in the US hospital
-                                sector given what regulators could have known about the realized effects of mergers. In the US specifically, 
-                                budgetary constraints or the biases of the judiciary may prevent regulators from committing to a certain degree of 
-                                stringency across merger proposals (Baer et al. 2020). Under these constraints, and recognizing that enforcement 
-                                has likely been too lax in the US within the last two decades, how can a regulator maintain an efficient level of stringency?
-                                <br><br>
-                                The merger review process in the United States enables regulators to extract information from firms pre-merger about their conduct 
-                                and the market that they operate in. Given that post-merger enforcement can be costly, and pre-merger challenges may fail, regulators 
-                                may be able to use merger reveiw to reduce the cost of enforcement ex-post by inducing firms to partially reveal their type through the information 
-                                that regualtors extract. Through this revelation, the regulator can credibly signal their willingness to pursue ex-post enforcement and thus 
-                                deter prospective mergers from engaging in in anti-competitive behavior. 
-                            </p></li>
-                <li class="project-title-link">
-                    Idenitifying the Spillover Effects of Minimum Wage Policy
-                        <p>
-                            The direct effect of minimum wage policy on poverty and unemployment is controversial both 
-                            theoretically and empirically. The indirect effects may be even harder to pin down robustly, as 
-                            they may especially be influenced by the idiosyncracies of particular labor markets. For example, if a worker 
-                            is receiving a wage below a prospective floor, that worker will likely receive some form of 
-                            increased compensation once the floor is imposed, or be dismissed. One interesting question 
-                            is how workers receiving a wage above (but close) to the new minimum are affected. One might 
-                            reason that these workers have similar skills to workers at the minimum, but benefitted from 
-                            frictions in the labor market (or by capitalizing on networks, etc). How is the mobility of 
-                            these workers affected? Does the friction shift with the newly imposed floor, or do firms 
-                            attempt to condense wages to the new minimum? Are these workers less able to leverage an 
-                            outside option in their wage negotiations as the distance of their wage to the minimum is 
-                            decreased? Empirically, can one robustly identify a minimum 
-                            threshold for wage increases that predicts a spillover effect on mobility?
-                        </p></li>
-                <li class="project-title-link">
-                    Leveraging Uncertainty in Risk Management
-                        <p>
-                            Many models of risk management utilize distributional assumptions on the risk associated with 
-                            porfolios. In particular, FHVaR utilizes assumptions on the stability of the distribution of 
-                            returns over time. When these assumptions are relaxed, the VaR and requisite level of 
-                            margin to protect against risk becomes uncertain. I would like to study whether the determination 
-                            of margin using rules from the theory of decision under uncertainty may acutally benefit trading 
-                            firms, and the extent of the sensitivity of market risk to these benefits. Intuitively, the distribution
-                            of required margin over a time-series may not be the same across all assumed distributions of market risk.
-                             What gains can be made by relaxing these assumption on market risk, and what cost does this entail for risk managers?
-                        </p></li>
-    </div>
-
 
 </body>
