--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <i class="fa-solid fa-file-lines"></i>
                 <h2>Research</h2>
                 <p> My research Projects</p>
-                <a href="pages/methodology">View List</a>
+                <a href="pages/projects">View List</a>
             </div>
 
             <div>
