adjusted tab labeling

--- a/pages/notes.html
+++ b/pages/notes.html
@@ -14,7 +14,7 @@
                 <!-- <img src="images/logo.jpg" class="logo"> -->
                 <ul id="sidemenu">
                     <li><a href="../index">Home</a></li>
-                    <li><a href="projects">Interests</a></li>
+                    <li><a href="projects">Research</a></li>
                     <li><a href="methodology">Methodology Readings</a></li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
