--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="externals">
                     <ul class="contact-links">
                         <li>
-                            <a href="mailto:atbanks@mit.edu">
+                            <a href="mailto:aaron.banks@wisc.edu">
                                 <i class="fa-solid fa-envelope"></i>
                             </a>
                         </li>
