small name change

--- a/pages/notes.html
+++ b/pages/notes.html
@@ -70,6 +70,6 @@
             <ul>
                 <li class="title-article">
                     <a href="https://drive.google.com/file/d/1kEE8lE58swaEsgvZb3MJtJhqd7j4cyEZ/view?usp=sharing">
-                        Intro to Dynamic Games Empirical IO </a><span> 
+                        Intro to Dynamic Games in Empirical IO </a><span> 
             </ul>
     </div>
