fixed dead link

--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -94,7 +94,7 @@
         <h1>Slides</h1>
             <ul>
                 <li class="title-article">
-                    <a href="https://www.dropbox.com/s/8kwtwn30dyac18s/intro.pdf?dl=0">
+                    <a href="https://www.dropbox.com/scl/fi/1gmqbaiyqjjho7edcydsa/intro.pdf?rlkey=ouyics7njk8firz9fqddpwedl&e=1&st=4l5f1u56&dl=0">
                         Models, Measurement, and the Language of Empirical Economics</a><span> by Phil Haile</span></li>
             <li class="title-article">
                 <a href="https://davidcard.berkeley.edu/lectures/woytinsky.pdf">
