--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,7 +69,7 @@
                         </p></li>
                 <li class="project-title-link">
                     <a href="https://drive.google.com/file/d/1MfHGJYkR4ODI6MDxbBLcmTVB08JmL60c/view?usp=sharing">
-                        What was the Price of Slaves in Ancient Rome? (Graduate American Economics History Final Project)</a>
+                        What was the Price of Slaves in Ancient Rome? (Graduate American Economic History Final Project)</a>
                         <p>
                             The paucity of numerical data need not result in scholars implementing
                             <span>ad hoc</span> empirical methods in their study of ancient economies. 
