--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="tab-contents active-tab" id="Education">
                     <ul>
-                        <li><span>UW Madison</span><br>
+                        <li><span>UW - Madison</span><br>
                             <span class="tab-subitem">PhD Candidate, Economics</li>
                         <li><span>Northwestern Unviersity</span><br>
                             <span class="tab-subitem">B.A. Economics (with honors);<br>Minor: Math</span></li>
