--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
-                <p><br> 
+                <p class="about-intro"><br> 
                     I'm a PhD student at UW-Madison studying economics. I'm interested in industrial organization and econometrics.
                     Previously, I was a predoc at MIT under Professors Mert Demirer and Ben Vatter.
                 </p>
