--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,8 +27,7 @@
     </div>
 
     <!-- <div class="page-descr">
-        I am <span>not</span> a trained economist, but below are some notes on some 
-        topics that interest me. I appreciate any and all literature recommendations.
+       This is a description placeholder
     </div> -->
 
     <div class="subtitle">
@@ -60,7 +59,7 @@
                 <li class="project-title-link">
                     <a href="https://drive.google.com/file/d/1RkVZJIFkT-3pMwm5dsoWkAjK7MUn_yTg/view?usp=drive_link">
                         Demarcation (Senior Thesis)</a>
-                        <p>
+                        <p class="project-abstract">
                             Theories may be informative to agents. When agents' actions are determined by the predictions of a
                             theory, the predictions endogenize the data that they are tested against. In this case, it is unclear
                             in what manner these theories can be regarded as scientific. I attempt to characterize this problem in a general
@@ -70,7 +69,7 @@
                 <li class="project-title-link">
                     <a href="https://drive.google.com/file/d/1MfHGJYkR4ODI6MDxbBLcmTVB08JmL60c/view?usp=sharing">
                         What was the Price of Slaves in Ancient Rome? (Graduate American Economic History Final Project)</a>
-                        <p>
+                        <p class="project-abstract">
                             The paucity of numerical data need not result in scholars implementing
                             <span>ad hoc</span> empirical methods in their study of ancient economies. 
                             Using the method of partial identification, I give an example 
