updated dead link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 <div id="intrigues">
     <div class="container">
-        <h1 class="sub-title">Research and Other Interest</h1>
+        <h1 class="sub-title">Research and Other Interests</h1>
         <div class="intrigues-list">
 
             <div>
