--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -39,7 +39,7 @@
                     <a href="https://www.journals.uchicago.edu/doi/abs/10.1086/253349">
                         Cost of Production and Price Over Long and Short Periods</a><span> by Frank H. Knight</span></li>
                 <li class="title-article">
-                    <a href="https://assets.aeaweb.org/asset-server/journals/aer/top20/35.4.519-530.pdf">
+                    <a href="https://www.jstor.org/stable/1809376?seq=1">
                         The Use of Knowledge in Society</a><span> by Friedrich A. Hayek</span></li>
                  <li class="title-article"><a href="https://www.jstor.org/stable/1826045">
                             The Utility Analysis of Choices Involving Risk</a><span> by Milton Friedman & Leonard J. Savage</span></li>
