removed undergrad projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -50,7 +50,7 @@
 </div>
 
 
-    <div class="subtitle">
+    <!-- <div class="subtitle">
         Undergrad Projects
     </div>
     <div class="working-paper">
@@ -79,6 +79,6 @@
                         </p></li>
                         <li class="project-title-link">
             </ul>
-    </div>
+    </div> -->
 
 </body>
