removed skills tab

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('Education')">Education</p>
                     <p class="tab-links" onclick="opentab('Experience')">Experience</p>
-                    <p class="tab-links" onclick="opentab('Skills')">Skills</p>
+                    <!-- <p class="tab-links" onclick="opentab('Skills')">Skills</p> -->
                 </div>
                 <div class="tab-contents active-tab" id="Education">
                     <ul>
@@ -97,7 +97,7 @@
                             <span class="tab-subitem">Volunteer Intern under John A. Rogers<span></li>
                     </ul>
                 </div>
-                <div class="tab-contents" id="Skills">
+                <!-- <div class="tab-contents" id="Skills">
                     <ul>
                         <li><span>Python</span><br>
                             <span class="tab-subitem">Structural Modelling/Estimation, Descriptives, Optimization,<br>JAX, Webscrapping</span></li>
@@ -112,7 +112,7 @@
                         <li><span>HTML, CSS, JS</span><br> 
                             <span class="tab-subitem">This Website</span></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
