updated experience tab

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                             <span class="tab-subitem">Don Lavoie Fellow</span></li>
                         <li><span>2020-2022</span><br>Department of Economics, Northwestern University<br>
                             <span class="tab-subitem"> Research Assistant to Vivek Bhattacharya and  Gaston Illanes</span></li>
-                        <li><span>2019-2020</span><br>Sibel Health<br>
+                        <!-- <li><span>2019-2020</span><br>Sibel Health<br>
                             <span class="tab-subitem">Manufacturing Technician</span></li>
                         <li><span>2019-2020</span><br>Simpson-Querrey Institute for Bio-integrated Electronics<br>
-                            <span class="tab-subitem">Volunteer Intern under John A. Rogers<span></li>
+                            <span class="tab-subitem">Volunteer Intern under John A. Rogers<span></li> -->
                     </ul>
                 </div>
                 <!-- <div class="tab-contents" id="Skills">
