cleaned up comments

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <div id="header">
     <div class="container">
         <nav>
-            <!-- <img src="images/logo.jpg" class="logo"> -->
             <ul id="sidemenu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -72,7 +71,7 @@
                         <li><span>UW - Madison</span><br>
                             <span class="tab-subitem">PhD Candidate, Economics</li>
                         <li><span>Northwestern Unviersity</span><br>
-                            <span class="tab-subitem">B.A. Economics (with honors);<br>Minor: Math</span></li>
+                            <span class="tab-subitem">B.A. Economics (with honors), Math Minor </span></li>
                         <li><span>Oakton Community College</span><br>
                             <span class="tab-subitem">A.A. track (non-degree)</span></li>
                     </ul>
@@ -86,33 +85,13 @@
                         <li><span>2022</span><br>CME Group Inc., Post-Trade and Optimization Services<br>
                             <span class="tab-subitem">Quant Risk Management & Clearing Intern</span></li>
                         <li><span>2022</span><br>Department of Economics, Dalhousie University/Johns Hopkins University<br>
-                            <span class="tab-subitem">Research Assistant to Stephane Mechoulan(DU) and Yujung Hwang (JHU)</span></li>
+                            <span class="tab-subitem">Research Assistant to Stephane Mechoulan (DU) and Yujung Hwang (JHU)</span></li>
                         <li><span>2021-2022</span><br>Mercatus Center, George Mason University<br>
                             <span class="tab-subitem">Don Lavoie Fellow</span></li>
                         <li><span>2020-2022</span><br>Department of Economics, Northwestern University<br>
                             <span class="tab-subitem"> Research Assistant to Vivek Bhattacharya and  Gaston Illanes</span></li>
-                        <!-- <li><span>2019-2020</span><br>Sibel Health<br>
-                            <span class="tab-subitem">Manufacturing Technician</span></li>
-                        <li><span>2019-2020</span><br>Simpson-Querrey Institute for Bio-integrated Electronics<br>
-                            <span class="tab-subitem">Volunteer Intern under John A. Rogers<span></li> -->
                     </ul>
                 </div>
-                <!-- <div class="tab-contents" id="Skills">
-                    <ul>
-                        <li><span>Python</span><br>
-                            <span class="tab-subitem">Structural Modelling/Estimation, Descriptives, Optimization,<br>JAX, Webscrapping</span></li>
-                        <li><span>R</span><br>
-                            <span class="tab-subitem">Cleaning and Describing Large Datasets</span></li>
-                        <li><span>Julia</span><br>
-                            <span class="tab-subitem">Structural Modelling/Estimation, parallelization (CUDA.jl)</span></li>
-                        <li><span>Stata</span><br>
-                            <span class="tab-subitem">Descriptives</span></li>
-                        <li><span>LaTeX</span><br>
-                            <span class="tab-subitem">Technical Writing</span></li>
-                        <li><span>HTML, CSS, JS</span><br> 
-                            <span class="tab-subitem">This Website</span></li>
-                    </ul>
-                </div> -->
             </div>
         </div>
     </div>
