--- a/pages/notes.html
+++ b/pages/notes.html
@@ -32,7 +32,7 @@
         There are many lecture notes online (especially in math), so I am attempting to reserve this page for notes 
         that I have used, and that I found to be very user-friendly. 
         <br><br>
-        I also include some of my own notes, which might to useful to some. 
+        I also include some of my own notes, which might be useful to some. 
     </div>
 
     <div class="works-container">
