--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="tab-contents" id="Experience">
                     <ul>
-                        <li><span>2026-Present</span><br>UW Madison<br>
+                        <li><span>2026-Present</span><br>UW-Madison<br>
                             <span class="tab-subitem">Graduate RA to JF Houde</span></li>
                         <li><span>2023-2025</span><br>MIT Sloan<br>
                             <span class="tab-subitem">Predoc under Mert Demirer and Benjamin Vatter</span></li>
@@ -122,7 +122,7 @@
             <div>
                 <i class="fa-solid fa-file-lines"></i>
                 <h2>Research</h2>
-                <p> My research Projects</p>
+                <p> My research projects</p>
                 <a href="pages/projects">View List</a>
             </div>
 
